--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "3.24.2",
+    "@emotion/react": "11.14.0",
     "@tailwindcss/vite": "4.1.12",
+    "clsx": "2.1.1",
+    "next-themes": "0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "5.5.0",
+    "shiki": "3.9.2",
     "tailwindcss": "4.1.12"
   },
   "devDependencies": {
@@ -20,6 +26,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
